tests/baselines/reference/classExtendsEveryObjectType2.errors.txt
tests/cases/conformance/classes/classDeclarations/classHeritageSpecification/classExtendsEveryObjectType2.ts(3,18): error TS1133: Type reference expected.
tests/cases/conformance/classes/classDeclarations/classHeritageSpecification/classExtendsEveryObjectType2.ts(3,20): error TS1005: ';' expected.


==== tests/cases/conformance/classes/classDeclarations/classHeritageSpecification/classExtendsEveryObjectType2.ts (2 errors) ====
    class C2 extends { foo: string; } { } // error
    
    class C6 extends []{ } // error
                     ~
!!! error TS1133: Type reference expected.
                       ~
!!! error TS1005: ';' expected.